# gptrs

./: Cargo.toml  LICENSE  README.md  example_config.json
src/: api.rs  app.rs  chat.rs  config.rs  event.rs  handler.rs  input.rs  lib.rs  main.rs  tui.rs  ui.rs  utils.rs
src/markdown/: parser.rs  tokenizer.rs
src/widgets/: error.rs
