[package]
name = "gptrs"
version = "0.1.0"
authors = ["Jonathan <git@jonathansm.dev>"]
license = "MIT"
edition = "2021"

[dependencies]
async-openai = "0.16.1"
clap = { version = "4.4.7", features = ["derive"] }
crossterm = "0.26.1"
dirs = "5.0.1"
futures = "0.3.29"
log = "0.4.20"
pulldown-cmark = "0.9.3"
ratatui = "0.25.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
simple-logging = "2.0.2"
textwrap = "0.16.0"
tokio = { version = "1.34.0", features = ["full"] }
tui-logger = {version = "0.10.1", features = ["crossterm"]}
tui-textarea = "0.4.0"
