[package]
name = "gptrs"
version = "0.1.0"
authors = ["Jonathan <git@jonathansm.dev>"]
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
clippers = "0.1.2"
crossterm = "0.26.1"
curl = "0.4.46"
dirs = "5.0.1"
log = "0.4.20"
ratatui = "0.25.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
textwrap = "0.16.0"
tiktoken-rs = "0.5.8"
tui-logger = {version = "0.10.1", features = ["crossterm"]}
tui-textarea = "0.4.0"

[profile.release]
strip = 'symbols'
